Fix scrollbars on <code> blocks

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -94,7 +94,7 @@ code,
     background-color: var(--color-black);
     padding: 0.3em;
     font-family: 'Courier New', Courier, monospace;
-    overflow: scroll;
+    overflow: auto;
 }
 
 header {
